# python-web-module-5

./: README.md  pyproject.toml
client/: index.html  main.css  main.js
server/: fetcher.py  logs.txt  server.py
