[tool.poetry]
name = "homework-05"
version = "0.1.0"
description = ""
authors = ["Artem <artem.zimovets@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
aiohttp = "^3.9.3"
websockets = "^12.0"
names = "^0.3.0"
aiofile = "^3.8.8"
aiopath = "^0.7.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
